<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSecondary"
    android:paddingHorizontal="16dp"
    android:paddingBottom="28dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:contentInsetStart="0dp"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/ToolbarMainMenuTitleText"/>

    <Button
        android:id="@+id/buttonSearch"
        style="@style/MainMenuButtons"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="24dp"
        android:text="@string/search_button_text"
        app:icon="@drawable/hand_lens" />
    <Button
        android:id="@+id/buttonMediaLibrary"
        style="@style/MainMenuButtons"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/medialibrary_button_text"
        app:icon="@drawable/media_library" />
    <Button
        android:id="@+id/buttonSettings"
        style="@style/MainMenuButtons"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/settings"
        app:icon="@drawable/gear_wheel" />

</LinearLayout>