<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/settings"
        app:titleTextAppearance="@style/ToolbarSettingsTitleText" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginStart="@dimen/activity_settings_padding_start_16dp"
        android:layout_marginEnd="@dimen/activity_settings_padding_end_12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/black_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/settingslist_text_16sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switcherDarkTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="@dimen/activity_settings_padding_start_16dp"
        android:layout_marginEnd="@dimen/activity_settings_padding_end_12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/settingslist_text_16sp" />

        <ImageView
            android:id="@+id/buttonShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/share" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_settings_elements_margintop_42dp"
        android:layout_marginStart="@dimen/activity_settings_padding_start_16dp"
        android:layout_marginEnd="@dimen/activity_settings_padding_end_12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_to_support"
            android:textColor="@color/black"
            android:textSize="@dimen/settingslist_text_16sp" />

        <ImageView
            android:id="@+id/buttonSupport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/support" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_settings_elements_margintop_42dp"
        android:layout_marginStart="@dimen/activity_settings_padding_start_16dp"
        android:layout_marginEnd="@dimen/activity_settings_padding_end_12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/settingslist_text_16sp" />

        <ImageView
            android:id="@+id/buttonUserAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/arrow_forward" />
    </FrameLayout>
</LinearLayout>