<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/search"
        app:titleTextAppearance="@style/ToolbarTitleText" />

    <FrameLayout
        android:id="@+id/edittext_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <EditText
            android:id="@+id/input_edit_text"
            style="@style/EditTextSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:paddingVertical="10dp" />

        <ImageView
            android:id="@+id/clear_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="12dp"
            android:src="@drawable/baseline_close_24"
            android:visibility="gone" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="100dp"
        android:indeterminateTint="@color/blue"
        />

    <TextView
        android:id="@+id/you_searched_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="12dp"
        android:text="@string/you_searched"
        android:textAppearance="@style/ToolbarTitleText"
        android:visibility="gone"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/image_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="102dp"
        android:visibility="gone"
        tools:src="@drawable/search_error_icon" />

    <TextView
        android:id="@+id/text_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textAppearance="@style/ToolbarTitleText"
        android:visibility="gone"
        tools:text="@string/search_error_message" />

    <Button
        android:id="@+id/button_update"
        style="@style/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/update"
        android:visibility="gone"
        tools:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="16dp"
        tools:listitem="@layout/track_view"
        />

</LinearLayout>