<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface"
    tools:context="com.practicum.playlistmaker.mediaLibrary.presentation.newplaylist.NewPlaylistFragment"
    android:id="@+id/newPlaylistFragment"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_new_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/new_playlist_toolbar"
        app:titleTextAppearance="@style/ToolbarTitleText" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_new_playlist"
        app:layout_constraintBottom_toTopOf="@id/button_create_playlist"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/centralBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.55" />

            <ImageView
                android:id="@+id/new_playlist_image_placeholder"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:contentDescription="@null"
                android:maxWidth="352dp"
                android:maxHeight="352dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/playlist_name_text_input_layout"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/rightBorder"
                app:layout_constraintStart_toStartOf="@id/leftBorder"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/new_playlist_layer_list" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/playlist_name_text_input_layout"
                style="@style/TextBoxOutlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:hint="@string/name_of_playlist_placeholder"
                app:layout_constraintBottom_toTopOf="@id/playlist_description_text_input_layout"
                app:layout_constraintEnd_toStartOf="@id/rightBorder"
                app:layout_constraintStart_toEndOf="@id/leftBorder"
                app:layout_constraintTop_toBottomOf="@id/new_playlist_image_placeholder">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/playlist_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditTextNewPlaylist"
                    android:maxLines="1"
                    android:textCursorDrawable="@drawable/cursor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/playlist_description_text_input_layout"
                style="@style/TextBoxOutlined"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/description_of_playlist_placeholder"
                app:layout_constraintEnd_toStartOf="@id/rightBorder"
                app:layout_constraintStart_toEndOf="@id/leftBorder"
                app:layout_constraintTop_toBottomOf="@id/playlist_name_text_input_layout"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/playlist_description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditTextNewPlaylist"
                    android:maxLines="1"
                    android:textCursorDrawable="@drawable/cursor" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_create_playlist"
        style="@style/button_create_new_playlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/create_new_playlist_button_color"
        android:text="@string/create_new_playlist"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
